[package]
name = "cleanup"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
ansi_term = "0.12.1"
file-format = { version = "0.18.0", features = ["reader"]}
