[package]
name = "cleanup"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"

[dependencies.clap]
version = "4.1.4"
features = ["derive"]

[dependencies.file-format]
version = "0.20.0"
features = ["reader"]
